# Text-to-Image-Generation-Model

./: README.md  kaggle_train.py  log.txt  pyproject.toml  requirements.txt  second_log.txt
diffusion/: __main__.py
kaggle/: notebook_runner.py
scripts/: make_kaggle_zip.ps1  setup_kaggle.ps1
src/diffusion/: __main__.py  base_dataset.py  clip_text_encoder.py  config.py  cross_attention.py  ddpm_scheduler.py  kaggle_entry.py  resnet_block.py  sd_unet_v1.py  self_attention.py  sinusoidal_time_embedder.py  stable_diffusion.py  stable_diffusion_trainer.py  train_service.py  vae.py
src/diffusion/datasets/: caption_dataset.py
tests/diffusion/: test_vae.py
tests/learning/: test_deep_learning.py
