[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reckit"
version = "0.1.0"
description = "Personal Image Diffusion Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pathlib>=1.0.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "transformers==4.57.6",
]

[project.optional-dependencies]
test = [
    "scipy==1.17.0",
]

[project.scripts]
unet-train = "diffusion.__main__:Main.training"
generate-image = "diffusion.__main__:Main.inference"

[project.urls]
Repository = "https://github.com/jslblar080/reckit"

[tool.setuptools.packages.find]
where = ["src"]
